--- a/index.html
+++ b/index.html
@@ -3418,6 +3418,6 @@
             document.getElementById( "modal" ).style.display = "block";
         }
     </script>
-      
+    <script src="./renderer.js"></script>
 </body>
 </html>
